# MCP-Server-Foundry

./: .gitignore  CHANGELOG.md  README.md  VISION.md  app.py  foundry_ui.html  foundry_ui.py  mcp_forge.html  milestone4_assessment_bob.md  requirements.txt
foundry/: .env.example  IMPLEMENTATION_PLAN.md  MILESTONE_2_TEST_RESULTS.md  README.md  __init__.py  forge_recipe.py  pyproject.toml  test_mcp_handshake.py
foundry/.github/workflows/: foundry-ci.yml
foundry/.semgrep/rules/: mcp-security.yaml
foundry/agents/: __init__.py  architect.py  builder.py  documenter.py  tester.py
foundry/core/: __init__.py  agent_interface.py  approval_gates.py  audit.py  compliance.py  orchestrator.py  routing.py  security.py  semgrep_gate.py  validation.py
foundry/demo/: cold_start_script.md
foundry/output/: .gitkeep
foundry/output/test-api/: execution_trace.json
foundry/output/test-api-repeat/: execution_trace.json  plan.json
foundry/output/test-api/server/: main.py
foundry/specs/: combined_eeeff266_api.yaml  combined_ffbcd2ca_api.yaml  home_cooking_dataset_v2_api.yaml  stripe_demo.yaml  world_heritage_api.yaml
foundry/templates/: audit_logger.py.j2  run_server.sh.j2  server_main.py.j2  server_main_secure.py.j2  test_server.py.j2  tool_reference.md.j2
foundry/tests/: conftest.py  test_governance.py  test_integration.py  test_validation.py
products/api-foundry/: README.md  ROADMAP.md  pyproject.toml
products/api-foundry/foundry/: .gitignore  IMPLEMENTATION_PLAN.md  MILESTONE_2_PLAN.md  MILESTONE_2_STATUS.md  README.md  SECURITY_BEST_PRACTICES.md  test_mcp_handshake.py
products/api-foundry/foundry/agents/: __init__.py  architect.py  builder.py  documenter.py  tester.py
products/api-foundry/foundry/core/: providers.py  spec_parser.py  validation.py
products/api-foundry/foundry/demo/: regeneration_script.md
products/api-foundry/foundry/specs/: combined_0ae86396_api.yaml  combined_0ef0062d_api.yaml  combined_20b0a6c9_api.yaml  combined_27059d09_api.yaml  combined_4b3999f2_api.yaml  combined_4d499c19_api.yaml  combined_774ae165_api.yaml  combined_9d6b846f_api.yaml  combined_a150298c_api.yaml  combined_a18dc396_api.yaml  combined_af9c2a52_api.yaml  combined_c3576bd3_api.yaml  combined_d4685089_api.yaml  github_demo.yaml  home_cooking_dataset_v2_06ab50_api.yaml  home_cooking_dataset_v2_355864_api.yaml  home_cooking_dataset_v2_498a89_api.yaml  home_cooking_dataset_v2_59b745_api.yaml  home_cooking_dataset_v2_667fd2_api.yaml  home_cooking_dataset_v2_93ddcc_api.yaml  (+8 more)
products/api-foundry/templates/: error_schemas.py.j2  run_server.bat.j2  server_main.py.j2  server_main_secure.py.j2  server_readme.md.j2  test_server.py.j2
products/data-agent/: README.md  pyproject.toml
products/data-agent/server/: backends.py  discovery.py  main.py
(+26 files in other folders)
