[project]
name = "mcp-server-foundry"
version = "0.1.0"
description = "IBM Bob-powered agentic pipeline converting OpenAPI specs to production-grade MCP servers"
authors = [
    {name = "MCP Foundry Team"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "pydantic>=2.6.0",
    "httpx>=0.26.0",
    "jsonschema>=4.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py312']

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]