[project]
name = "mcp-server-foundry"
version = "0.4.0"
description = "Agentic pipeline converting OpenAPI specs to production-grade MCP servers"
authors = [
    {name = "MCP Foundry Team"}
]
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "pyyaml>=6.0.1",
    "jinja2>=3.1.3",
    "pydantic>=2.6.0",
]

[project.scripts]
forge = "foundry.forge_recipe:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "black>=24.0.0",
    "ruff>=0.2.0",
]
security = [
    "semgrep>=1.50.0",
]
all = [
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "semgrep>=1.50.0",
]

[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]