[project]
name = "data-agent"
version = "1.0.0"
description = "Product A: Talk-to-your-data MCP server for CSV, Excel, JSON, and Parquet"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.1.0",
    "pandas>=2.0.0",
    "openpyxl>=3.1.0",
    "duckdb>=0.9.0",
    "sqlglot>=20.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0"
]
